--- a/services/embeddings-service/pyproject.toml
+++ b/services/embeddings-service/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "hatchling.build"
 [project]
 name = "biocentral-embedding-service"
 version = "0.1.0"
-description = "Embedding computation service with Redis caching"
+description = "ProtT5 embedding service with Triton gRPC and Redis caching"
 requires-python = ">=3.11"
 
 dependencies = [
@@ -14,31 +14,27 @@ dependencies = [
     "uvicorn[standard]>=0.24.0,<1.0.0",
     "pydantic>=2.5.0,<3.0.0",
     
-    # Core ML dependencies  
-    "torch>=2.1.0,<3.0.0",
-    "transformers>=4.35.0,<5.0.0",
+    # Triton client for gRPC communication
+    "tritonclient[grpc]>=2.40.0,<3.0.0",
+    
+    # Core ML dependencies
     "numpy>=1.24.0,<2.0.0",
     
-    # Biotrainer for embeddings (TODO: integrate existing biocentral_server logic)
-    "biotrainer @ git+https://github.com/sacdallago/biotrainer.git@develop",
-    
-    # Redis for caching and queues (no PostgreSQL needed)
+    # Redis for caching with compression
     "redis>=5.0.0,<6.0.0",
+    "blosc2>=2.7.1,<3.0.0",  # Fast compression for embeddings
+    
+    # Queue management
     "rq>=2.1.0,<3.0.0",
+    
+    # Async HTTP client
+    "httpx>=0.25.0,<1.0.0",
 ]
 
 [project.optional-dependencies]
 dev = [
     "pytest>=7.4.0",
     "pytest-asyncio>=0.21.0",
-    "httpx>=0.25.0",
     "ruff>=0.1.0",
 ]
 
-gpu = [
-    "onnxruntime-gpu>=1.16.0,<2.0.0",
-]
-
-cpu = [
-    "onnxruntime>=1.16.0,<2.0.0", 
-]
