--- a/services/prediction-service/pyproject.toml
+++ b/services/prediction-service/pyproject.toml
@@ -14,13 +14,12 @@ dependencies = [
     "uvicorn[standard]>=0.24.0,<1.0.0",
     "pydantic>=2.5.0,<3.0.0",
     
-    # ONNX Runtime (TODO: will be replaced with Triton client)
-    "onnxruntime>=1.16.0,<2.0.0",
+    # Triton client for inference
+    "tritonclient[grpc]>=2.40.0,<3.0.0",
     "numpy>=1.24.0,<2.0.0",
     
-    # Specialized model dependencies (TODO: integrate with existing models)
-    "vespag @ git+https://github.com/biocentral/VespaG.git@onnx-deployment",
-    "tmbed @ git+https://github.com/biocentral/TMbed.git@onnx-deployment",
+    # HTTP client for embedding service
+    "httpx>=0.25.0,<1.0.0",
     
     # Redis for queues (no PostgreSQL needed)
     "redis>=5.0.0,<6.0.0",
