Fix service structure
Signed-off-by: Tobias O <tobias.olenyi@tum.de>

--- a/services/embeddings-service/Dockerfile
+++ b/services/embeddings-service/Dockerfile
@@ -1,31 +1,35 @@
-FROM python:3.11-slim
+# Use the official uv image with Python 3.11
+FROM ghcr.io/astral-sh/uv:python3.11-bookworm-slim
 
-# Install system dependencies for gRPC and compilation
+# Install system dependencies for gRPC
 RUN apt-get update && apt-get install -y \
-    git \
     build-essential \
     pkg-config \
     && rm -rf /var/lib/apt/lists/*
 
+# Set working directory
 WORKDIR /app
 
-# Install UV for fast dependency management
-COPY --from=ghcr.io/astral-sh/uv:latest /uv /bin/uv
+# Copy dependency files first (for better caching)
+COPY pyproject.toml uv.lock* ./
 
-# Copy service files
-COPY pyproject.toml .
-COPY main.py .
-COPY triton_client.py .
-COPY cache.py .
+# Install dependencies (not the project itself)
+RUN --mount=type=cache,target=/root/.cache/uv \
+    uv sync --locked --no-install-project
 
-# Install dependencies (no shared utilities needed)
-RUN uv pip install --system --no-cache -e .
+# Copy the project source code
+COPY . .
 
+# Install the project
+RUN --mount=type=cache,target=/root/.cache/uv \
+    uv sync --locked
+
+# Expose the service port
 EXPOSE 8001
 
 # Health check using the service's own health endpoint
 HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
-    CMD python -c "import httpx; httpx.get('http://localhost:8001/embeddings/health', timeout=5).raise_for_status()"
+    CMD uv run python -c "import httpx; httpx.get('http://localhost:8001/embeddings/health', timeout=5).raise_for_status()"
 
-# Run the FastAPI service
-CMD ["python", "main.py"]
+# Run the application using uv
+CMD ["uv", "run", "fastapi", "run", "embedding_service.main:app", "--host", "0.0.0.0", "--port", "8001"]
