--- a/services/embeddings-service/pyproject.toml
+++ b/services/embeddings-service/pyproject.toml
@@ -10,31 +10,36 @@ requires-python = ">=3.11"
 
 dependencies = [
     # FastAPI stack
-    "fastapi>=0.104.0,<1.0.0",
-    "uvicorn[standard]>=0.24.0,<1.0.0",
-    "pydantic>=2.5.0,<3.0.0",
+    "fastapi[standard]>=0.116,<1",
+    "pydantic>=2.11,<3",
     
     # Triton client for gRPC communication
-    "tritonclient[grpc]>=2.40.0,<3.0.0",
+    "tritonclient[grpc]>=2.59,<3",
     
     # Core ML dependencies
-    "numpy>=1.24.0,<2.0.0",
+    "numpy>=2.3,<3",
     
     # Redis for caching with compression
-    "redis>=5.0.0,<6.0.0",
-    "blosc2>=2.7.1,<3.0.0",  # Fast compression for embeddings
+    "redis>=6.2,<7",
+    "blosc2>=3.6,<4",  # Fast compression for embeddings
     
     # Queue management
-    "rq>=2.1.0,<3.0.0",
+    "rq>=2.4,<3",
     
     # Async HTTP client
-    "httpx>=0.25.0,<1.0.0",
+    "httpx>=0.28,<1",
 ]
 
 [project.optional-dependencies]
 dev = [
-    "pytest>=7.4.0",
-    "pytest-asyncio>=0.21.0",
-    "ruff>=0.1.0",
+    "pytest>=8.4",
+    "pytest-asyncio>=1.1.0",
+    "ruff>=0.12.5",
 ]
+
+[project.scripts]
+embedding-service = "embedding_service.main:main"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/embedding_service"]
 
