Update model repo
Signed-off-by: Tobias O <tobias.olenyi@tum.de>

--- a/services/model-repository/.gitignore
+++ b/services/model-repository/.gitignore
@@ -1,2 +1,4 @@
-_internal_onnx/1/
-_internal_tokenizer/1/
+!esm2_tokenizer/1/model.py
+!prot_t5_tokenizer/1/model.py
+!seth_postprocess/1/model.py
+*/1/
