--- a/services/embeddings-service/Dockerfile
+++ b/services/embeddings-service/Dockerfile
@@ -32,4 +32,4 @@ HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
     CMD uv run python -c "import httpx; httpx.get('http://localhost:8001/embeddings/health', timeout=5).raise_for_status()"
 
 # Run the application using uv
-CMD ["uv", "run", "fastapi", "run", "embedding_service.main:app", "--host", "0.0.0.0", "--port", "8001"]
+CMD ["uv", "run", "fastapi", "run", "src.embedding_service.main:app", "--host", "0.0.0.0", "--port", "8001"]
